# claudible

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  pyproject.toml  release.sh
.github/workflows/: publish.yml
src/claudible/: __init__.py  __main__.py  audio.py  cli.py  materials.py  monitor.py
