[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claudible"
version = "0.1.1"
description = "Ambient audio soundscape feedback for terminal output - an opus for your terminals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "sounddevice>=0.4.0",
]

[project.scripts]
claudible = "claudible.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/claudible"

[tool.setuptools.packages.find]
where = ["src"]
